# launchnix

./: .gitattributes  .gitignore  Cargo.nix  Cargo.toml  MANUAL.org  Makefile  README.adoc  README.org  crate-hashes.json  default.nix  result  result-bin  shell.nix  vm.nix
examples/: example-deployment.nix
nix/: baseimage.nix  hwconfig-build.nix  hwconfig.nix  result  tomorph.nix
src/: image.rs  main.rs  morph.rs  nix.rs  nix_image.rs  pathutils.rs  qcow2.rs  vm.rs  xml.rs
