[package]
name = "launchnix"
version = "0.1.0"
authors = ["Ramesh Balaji <post2rb@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amxml = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
virt = { git = "https://gitlab.com/libvirt/libvirt-rust/" } # *sigh
format_xml = "0.2"
ssh2 = "0.9"
ergo_fs = "0.2"
rand = "0.8"
structopt = "0.3"
tera = { version = "1", default-features = false }
tempfile = "3.2"
